--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,13 @@
 
 # dependencies
 /node_modules
-.env
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
-# testing 
+# testing
 /coverage
- 
-# next.js  
+
+# next.js
 /.next/
 /out/
 
@@ -27,7 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-
+.env*.local
 
 # vercel
 .vercel
@@ -35,3 +33,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# vscode
+.vscode
+
+# env
+.env
